# Settings

./: .cursorindexingignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .xvimrc  CLAUDE.md  Igor Tools.alfredworkflow  Microsoft.PowerShell_profile.ps1  README.md  __archive_alt-space-launch-alfred.ahk  _ivim.rc.vim  _typos.toml  _vsvimrc  alt-space-launch-alfred.ahk  alt-space-launch-windows.ahk  biome.jsonc  bootstrap.sh  brew_packages_4_11_2022  clink_inputrc  clip_forward.sh  cmd  conda.bat  default.alfredsnippets  default_vimrc  forcepy.sh  hgrc  ish_daily_todo_clipboard.sh  justfile  mosh.sh  package-lock.json  package.json  pbcopy  port_forward.sh  private.xml  pub_keys.txt  repro-toc-gaurd-move.vim  rpbcopy.sh  rpbpaste.sh  setup_linux.sh  test-push.txt  (+2 more)
.claude/: settings.local.json
alpine/: apk_files  misc.rc
chop-logs/: alfred-command-caching-optimization-plan.md  available-specstory-commands-overview.md
claude-docker/: .dockerignore  Dockerfile.1-base  Dockerfile.2-stable-minimal  Dockerfile.3-development  README.md  build-dev.sh  build-minimal.sh  claude-docker.py  container-prompt.sh
config_carapace/: bridges.yaml
cursor-logs/: adding-new-specstory-commands.md  adding-specstory-to-gitignore.md  enhancing-git-diff-with-color-output.md  renaming-directory-with-dry-principles.md  zsh-command-for-specstory-selection.md
devbox/: Dockerfile  build.sh  docker.commands.sh  run.sh
linux/: install_linux.sh  misc_commands.sh
mac/: .finicky.js  .xvimrc  Igor Toys.alfredworkflow  alcatraz.sh  auto_complete_blog.py  chat_for_person.sh  chrome_control.js  external_monitor.txt  ig.alfredworkflow  install.sh  karabiner.copied.json  karabiner.json  karabinerSetup.sh  multi_keyboard_sync.json  push_karabiner_config.sh  userfulstuff.txt  vscode.md  zshSetup.sh
mcp_servers/: github-mcp-server.sh  mcp_claude.py
newmachine/: 3-sbs.grid  install_packages.ps1  installvsextensions.ps1  new_machine.txt  profiles.json  setup.bat  setup_jupyter_vim.bat
nvim/: init.vim  min_test_init.lua  (+16 more)
py/: a.py  ai_clip.py  amazon2monarch.py  brew_check.py  chop.py  gmail_reader.py  install_packages.py  jekyll_server.py  omnifocus.py  omnifocus_tasks.js  pyproject.toml  rbv.py  running_servers.py  shorten.py  test_running_servers.py  tmux_help.py  tmux_helper.py  todo_to_omnifocus.py  ux.py  vim_python.py  web_to_markdown.py  y.py
rust/tmux_helper/: CLAUDE.md  Cargo.toml  LINK_PICKER_SPEC.md  PICKER_SPEC.md  build.rs
rust/tmux_helper/src/: agent_continue.rs  main.rs  picker.rs
rust/tmux_helper/src/link_picker/: detect.rs  enrich.rs  mod.rs  tui.rs
(+119 files in other folders)
