[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idvorkin_scripts"
version = "0.1.0"
description = "A collection of Igor's Python scripts"
authors = [{name = "Igor Dvorkin"}]
dependencies = [
    "typer",
    "httpx",
    "typing-extensions",
    "rich",
    "icecream",
    "pydantic",
    "pyperclip; sys_platform == 'darwin'",
    "httpx",
    "typing-extensions",
]

[tool.setuptools]
py-modules = ["y", "vim_python", "todo_to_omnifocus", "shorten"]

[project.scripts]
y = "y:app"
vim_python = "vim_python:app"
todo_to_omnifocus = "todo_to_omnifocus.py:app"
shorten = "shorten:app"

