[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idvorkin_scripts"
version = "0.1.0"
description = "A collection of Igor's Python scripts"
authors = [{name = "Igor Dvorkin"}]
dependencies = [
    "typer",
    "click==8.1.8", # 8.2 seems borked
    "httpx",
    "typing-extensions",
    "rich",
    "icecream",
    "pydantic",
    "pyperclip; sys_platform == 'darwin'",
    "pyautogui; sys_platform == 'darwin'",
    "pyobjc; sys_platform == 'darwin'",
    "httpx",
    "typing-extensions",
    "pillow",
    "psutil",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "requests",
]

[tool.setuptools]
py-modules = ["a", "y", "vim_python", "shorten", "tmux_helper", "gmail_reader", "chop"]

[project.scripts]
y = "y:app"
a = "a:app"
vim_python = "vim_python:app"
shorten = "shorten:app"
tmux_helper = "tmux_helper:app"
gmail = "gmail_reader:app"
chop = "chop:app"

[tool.uv]
dev-dependencies = [
    "ruff",
]

