[package]
name = "rmux_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rmux_helper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sysinfo = "0.37"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.29"
ansi-to-tui = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
